add favicon, update seed data

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React Template</title>
+    <title>PartyFinder</title>
+    <link rel="icon" type="image/png" href="./images/favicon-32x32.png"/>
+    <!-- <link rel="icon" type="image/png" sizes="32x32" href="./favicon.ico"> -->
     <link
   rel="stylesheet"
   href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
